--- a/src/client/index.html
+++ b/src/client/index.html
@@ -16,6 +16,15 @@
   <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-route.min.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+<!--   <script>
+    var socket = io('http://localhost:3000');
+    socket.on('status', function (data) {
+      console.log('status report: ', data);
+      // socket.emit('my other event', { my: 'data' });
+    });
+  </script> -->
+  <script src="./vendor/socket.min.js"></script>
   <script src="./main.js"></script>
   <script src="./services.js"></script>
   <script src="./controllers.js"></script>
